# filar

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  PROGRESS.md  README.md  SETUP_ISSUES_PROMPT.md  USER_GUIDE.md  coderabbit.yaml  config.toml  run.bat  skill-address-review.md  skill-work-one-issue.md
.cargo/: config.toml.example
.github/ai-review/: README.md  prompt.md  review.mjs
.github/workflows/: ai-review.yml  engine-targets.yml  eval-smoke.yml  release.yml
.qoder/skills/address-review/: SKILL.md
.qoder/skills/prepare-release/: SKILL.md
.qoder/skills/work-one-issue/: SKILL.md
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  events.rs  glm.rs  lib.rs  openai_compat.rs  security.rs  tools.rs
crates/app/: Cargo.toml  build.rs
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: chat.rs  config.rs  error.rs  lib.rs  secrets.rs  session.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: error.rs  interactive.rs  lib.rs  local.rs  secret.rs  ssh.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  confirmer.rs  event.rs  lib.rs  log_layer.rs  runner.rs  terminal.rs  ui.rs
crates/tui/src/ui/: bars.rs  chat.rs  confirm.rs  input.rs  layout_cache.rs  mod.rs  text.rs  theme.rs
docker/sshd/: Dockerfile
docs/: DESIGN_PHILOSOPHY.md  ENGINE_API.md  eval-methodology.md
docs/plans/: 02-engine-api.md  TUI_MODERNIZATION_PLAN.md
eval/: .gitignore  README.md  asserts.js  asserts.test.js  eval-report.html  eval-report_eval-SLt-2026-07-18T13_32_10.html  eval-viewer.html  promptfooconfig.yaml
eval/datasets/: .gitkeep  filar.yaml
eval/prompts/: agent-chat.json  agent-system.txt
eval/scripts/: run-eval.js  smoke-check.js
issues/: 01-issue.md  02-issue.md  03-issue.md  04-issue.md  05-issue.md  06-issue.md  07-issue.md  08-issue.md  09-issue.md  10-issue.md  11-issue.md
