[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/transport",
    "crates/agent",
    "crates/tui",
    "crates/gui",
    "crates/app",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Async trait support
async-trait = "0.1"

# SSH
russh = "0.61"
ssh-key = "0.7.0-rc.10"

# UUID for request IDs
uuid = { version = "1", features = ["v4"] }

# PTY / streaming
portable-pty = "0.8"
bytes = "1"
futures = "0.3"
tokio-util = "0.7"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# TUI
ratatui = { version = "0.28", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Terminal emulation
alacritty_terminal = "0.26"

# GUI launcher
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }

# OS credential storage (Windows Credential Manager, macOS Keychain, Linux Secret Service)
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }

# Clipboard
arboard = "3"

# Secret zeroization
zeroize = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Internal crates
filar-core = { path = "crates/core" }
filar-transport = { path = "crates/transport" }
filar-agent = { path = "crates/agent" }
filar-tui = { path = "crates/tui" }
filar-gui = { path = "crates/gui" }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
