[package]
name = "filar-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "filar"
path = "src/main.rs"

[dependencies]
filar-core = { workspace = true }
filar-transport = { workspace = true }
filar-agent = { workspace = true }
filar-tui = { workspace = true }
filar-gui = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tracing-appender = { workspace = true }

[build-dependencies]
winres = "0.1"
