[package]
name = "filar-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
filar-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
russh = { workspace = true }
ssh-key = { workspace = true }
uuid = { workspace = true }
portable-pty = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
